# TextAnalizer

./: CMakeLists.txt  LICENSE  README.md
src/: Exceptions.h
